--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "flow",
     "react.js",
     "reactNative.js",
-    ".flowconfig"
+    ".flowconfig",
+    ".yalc"
   ],
   "jest": {
     "testEnvironment": "node",
